# rabbitmq-playground

./: .gitignore  Dockerfile  README.md  config.py  consumer.py  docker-compose.yml  driver.py  producer.py  pyproject.toml
default-exchange/: producer.py
direct-exchange/: consumer.py
fanout-exchange/: publisher.py  subscriber.py
