[tool.poetry]
authors = ["Shishir Biyyala"]
description = "A playground for RabbitMQ and Python."
name = "rabbitmq-playground"
version = "0.0.1"

[tool.poetry.dependencies]
gunicorn = "20.0.4"
python = "^3.9"
python-dateutil = "2.8.1"

[tool.poetry.dev-dependencies]
black = "21.10b0"
coverage = {version = "^5.3.1", extras = ["toml"]}
flake8 = "^3.8"
ipython = "^7.19.0"
isort = "^5.7.0"
mixer = "^7.1.2"
pre-commit = "^2.10.1"
pytest = "^6.1.2"
pytest-cov = "^2.11.1"
python-dotenv = "^0.19.1"
uritemplate = "^3.0.1"

[tool.isort]
atomic = true
combine_as_imports = true
default_section = 'THIRDPARTY'
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
no_lines_before = 'STDLIB'
sections = ['FUTURE', 'STDLIB', 'DJANGO', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
skip = ['.git', 'venv', 'env', '.venv']
skip_glob = ['**/migrations/**', 'manage.py']
src_paths = ['api', 'tests']

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ["py39"]

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
